00-NameServer-IngressSvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-ingress
