02-Nginx-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-ingress
  namespace: portfolio-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-ingress
  template:
    metadata:
      labels:
        app: portfolio-ingress
    spec:
      serviceAccountName: portfolio-ingress
      containers:
      - image: nginx/nginx-ingress:edge
        imagePullPolicy: Always
        name: portfolio-ingress
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        args:
          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
         #- -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
         #- -v=3 # Enables extensive logging. Useful for troubleshooting.
         #- -report-ingress-status
         #- -external-service=nginx-ingress
         #- -enable-leader-election
