04-HealthRust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthrust
spec:
  replicas: 2
  selector:
    matchLabels:
      app: healthrust
  template:
    metadata:
      labels:
        app: healthrust
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: healthrust
        image: moises:5000/healthrust
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
