15-Odata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odata
  template:
    metadata:
      labels:
        app: odata
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: odata
        image: moises:5000/odata
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
