03-Nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-ingress
  namespace: portfolio-ingress
spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31854
    protocol: TCP
    name: http
  selector:
    app: portfolio-ingress
