08-Portfolio-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: portfolio-svc
spec:
  selector:
    app: portfolio
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
