16-Odata-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: odata-svc
spec:
  selector:
    app: odata 
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 80
