06-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: moimartoli.sytes.net
    http:
      paths:    
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: healthrust-svc
            port:
              number: 80
